--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ body {
 
 .contact-container{
   background-color: #f2f2f2;
-  height: 100vh;
+  height: 95vh;
 }
 
 .contact-container div{
@@ -170,6 +170,10 @@ body {
   top: 50%;
   transform: translateY(-50%);
 
+}
+
+.contact-container h1{
+  margin-top: 0px;
 }
 
 .connect-container{
@@ -180,12 +184,15 @@ body {
   font-size: large;
 }
 
-.social li{
-  display: inline;
+.social{
+  padding: 0px;
 }
 
-.linkedin{
+.social li{
+  display: inline-block;
   padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 footer{
