--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
    font-family: "Raleway";
   width: 100%;
   height: 100%;
+
 }
 
 .navbar{
@@ -46,26 +47,11 @@ body {
     background: url(http://i1036.photobucket.com/albums/a441/James_Q/ad68f472-b6e7-4a8f-a76c-99af2631ffb7_zpsrnvjogwa.jpg) no-repeat center center;
     height: 100vh;
     background-size: cover;
-  
-}
-
-.pcontainer img {
-  position: relative;
-  top: 50%;
-  transform: translateY(0%);
-  width: 50%;
-  height: 50%;
-  border-radius: 50%;
-}
-
-.pcontainer div{
-  margin-top: 25px;
-  margin-bottom: 200px;
 }
 
 .pcontainer h1{
   margin-top: 50px; 
-  font-size: 300%;
+  font-size: 3em;
   color: white;
   font-weight: bold;
   position: relative;
@@ -73,35 +59,47 @@ body {
   transform: translateY(-50%);
 }
 
-
-
 .about-container{
   background-color: #f2f2f2;
-  height: 120vh;
+  min-height: 100vh;
+  height: auto;
+  display: flex;
+  align-items: center;
 }
 
-.about-container div{
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 500px;
+.about-container p{
+  width: 50vw;
+  font-size: 1.2em;
   margin-left: auto;
   margin-right: auto;
-  font-size: large;
   max-height: 90%;
   max-width: 90%;
+  text-align: justify;
+}
+
+.about-container div h2{
+  width: 100vw;
+  text-align: center;
+  font-size: 2em;
 }
 
 .projects-container {
   background-color: #03A9F4;
-  padding-bottom: 20vh;
+  padding-bottom: 10vh;
   padding-top: 10vh; 
-   min-height: 90vh;
-
+  min-height: 100vh;  
 }
 
 .projects-container h1{
   margin: 50px auto 50px auto;
+  width: 100%;
+}
+
+.projectsFlex{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .projectWrapper {
@@ -110,8 +108,11 @@ body {
   overflow: hidden;
   margin: 10px;
   border-radius: 8px;
-  display: inline-block;
-  position: relative;
+  transition: 0.6s ease;
+}
+
+.projectWrapper:hover{
+  transform: scale(1.1);
 }
 
 .projects-container img{
@@ -120,6 +121,7 @@ body {
 
 .projectWrapper img {
   width: 100%;
+  transition: 0.4 ease;
 }
 
 .projectWrapper:hover img {
@@ -162,7 +164,7 @@ body {
 
 .contact-container{
   background-color: #f2f2f2;
-  height: 95vh;
+  height: 100vh;
 }
 
 .contact-container div{
@@ -194,6 +196,23 @@ body {
   padding-right: 10px;
 }
 
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: white;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 footer{
   background-color: #0093D1;
   padding: 20px 0px 20px 0px;
@@ -204,6 +223,12 @@ footer{
   top: 50%;
   transform: translateY(0%);
 }
+
+.navbar-fixed-top{
+  transition: transform 1000ms linear;
+}
+
+
 
 
 
