--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
    font-family: "Raleway";
   width: 100%;
   height: 100%;
-   overflow-x: hidden;
+  overflow-x: hidden;
 
 }
 
@@ -48,6 +48,7 @@ body {
     background: url(http://i1036.photobucket.com/albums/a441/James_Q/ad68f472-b6e7-4a8f-a76c-99af2631ffb7_zpsrnvjogwa.jpg) no-repeat center center;
     height: 100vh;
     background-size: cover;
+    text-align: center;
 }
 
 .pcontainer h1{
@@ -75,6 +76,7 @@ body {
   margin-right: auto;
   max-height: 90%;
   max-width: 90%;
+  /*min-width: 90%;*/
   text-align: justify;
 }
 
